# pylint_editable_test

./: test.py
editable_dep/: pyproject.toml
noneditable_dep/: pyproject.toml
