[project]
name = "editable_dep"
version = "0.1.0"
requires-python = ">=3.10"
authors = [{name = "pavol.vargovcik", email = "pavol.vargovcik@gmail.com"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: Linux",
  "Private :: Do Not Upload",
  "Development Status :: 4 - Beta",
  "Environment :: Console",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
